src/objects/Expert__c.object
<CustomObject>
    <fields>
        <fullName>ZhermackClinical__c</fullName>
        <label>Zhermack Clinical</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hydrogum 5</fullName>
                </value>
                <value>
                    <fullName>Hydrocolor 5</fullName>
                </value>
                <value>
                    <fullName>Neocolloid</fullName>
                </value>
                <value>
                    <fullName>Orthoprint</fullName>
                </value>
                <value>
                    <fullName>Tropicalgin</fullName>
                </value>
                <value>
                    <fullName>Hydrogum</fullName>
                </value>
                <value>
                    <fullName>Zetalgin</fullName>
                </value>
                <value>
                    <fullName>Pinkalgin</fullName>
                </value>
                <value>
                    <fullName>MX-300</fullName>
                </value>
                <value>
                    <fullName>Freealgin</fullName>
                </value>
                <value>
                    <fullName>Hydrorise</fullName>
                </value>
                <value>
                    <fullName>Hydrorise Implant</fullName>
                </value>
                <value>
                    <fullName>Elite HD+</fullName>
                </value>
                <value>
                    <fullName>Zetaplus</fullName>
                </value>
                <value>
                    <fullName>Oranwash</fullName>
                </value>
                <value>
                    <fullName>Sympress</fullName>
                </value>
                <value>
                    <fullName>Occlufast</fullName>
                </value>
                <value>
                    <fullName>Occlufast+</fullName>
                </value>
                <value>
                    <fullName>Acrytemp</fullName>
                </value>
                <value>
                    <fullName>Elite Glass</fullName>
                </value>
                <value>
                    <fullName>Elite Soft Relining</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZhermackHygiene__c</fullName>
        <label>Zhermack Hygiene</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Zeta 1 Ultra</fullName>
                </value>
                <value>
                    <fullName>Zeta 2 Enzyme</fullName>
                </value>
                <value>
                    <fullName>Zeta 2 Sporex</fullName>
                </value>
                <value>
                    <fullName>Zeta 3 Soft</fullName>
                </value>
                <value>
                    <fullName>Zeta 3 Wipes Total</fullName>
                </value>
                <value>
                    <fullName>Zeta 3 Foam</fullName>
                </value>
                <value>
                    <fullName>Zeta 3 Wipes Pop-up</fullName>
                </value>
                <value>
                    <fullName>Zeta 4 Wash</fullName>
                </value>
                <value>
                    <fullName>Zeta 5 Power Act</fullName>
                </value>
                <value>
                    <fullName>Zeta 6 DryGel</fullName>
                </value>
                <value>
                    <fullName>Zeta 7 Spray</fullName>
                </value>
                <value>
                    <fullName>Zeta 7 Solution</fullName>
                </value>
                <value>
                    <fullName>Algitray</fullName>
                </value>
                <value>
                    <fullName>Gypstray</fullName>
                </value>
                <value>
                    <fullName>Zeta Roll</fullName>
                </value>
                <value>
                    <fullName>Safemix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZhermackKOL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zhermack KOL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZhermackLab__c</fullName>
        <label>Zhermack Lab</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Elite Master</fullName>
                </value>
                <value>
                    <fullName>Elite Rock</fullName>
                </value>
                <value>
                    <fullName>Elite Base</fullName>
                </value>
                <value>
                    <fullName>Elite Stone</fullName>
                </value>
                <value>
                    <fullName>Elite Model</fullName>
                </value>
                <value>
                    <fullName>Elite Arti</fullName>
                </value>
                <value>
                    <fullName>Elite Ortho</fullName>
                </value>
                <value>
                    <fullName>Elite Transparent</fullName>
                </value>
                <value>
                    <fullName>Elite Platinum</fullName>
                </value>
                <value>
                    <fullName>Zetalabor</fullName>
                </value>
                <value>
                    <fullName>Titanium</fullName>
                </value>
                <value>
                    <fullName>Elite Double</fullName>
                </value>
                <value>
                    <fullName>Gingifast</fullName>
                </value>
                <value>
                    <fullName>Elite LC Tray</fullName>
                </value>
                <value>
                    <fullName>Hydrorise Implant, Quick Set version</fullName>
                    <isActive>false</isActive>
                    <label>Hydrorise Implant, Quick Set version</label>
                </value>
                <value>
                    <fullName>Occlufast +</fullName>
                    <isActive>false</isActive>
                    <label>Occlufast +</label>
                </value>
                <value>
                    <fullName>Occlufast Color</fullName>
                    <isActive>false</isActive>
                    <label>Occlufast Color</label>
                </value>
                <value>
                    <fullName>Zeta 1 Ultra</fullName>
                    <isActive>false</isActive>
                    <label>Zeta 1 Ultra</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isMyKOL__c</fullName>
        <description>Shows True if KOL is owned by the user looking at it - intended to be used in List view filters etc.</description>
        <formula>IF( Other_Contact_Point__c =  $User.Id , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is my KOL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>science_and_technology_product_dev__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Experience in both science and technology transfer/product development</inlineHelpText>
        <label>science and technology/product dev</label>
        <type>Checkbox</type>
    </fields>
    <label>KOL information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Profession_Group__c</columns>
        <columns>Tier__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>ClinicalAffairs</group>
            <group>Global_Clinical_Affairs</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Experts</fullName>
        <columns>NAME</columns>
        <columns>Tier__c</columns>
        <columns>Company__c</columns>
        <columns>Country__c</columns>
        <columns>Email__c</columns>
        <columns>KOL_Email__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Experts</label>
    </listViews>
    <listViews>
        <fullName>TH_KOL_Information</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>TH</value>
        </filters>
        <label>TH: KOL Information</label>
        <sharedTo>
            <roleAndSubordinatesInternal>TH_CRM_Analyst</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>KOL Information</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KOL information</pluralLabel>
    <recordTypes>
        <fullName>Expert</fullName>
        <active>true</active>
        <label>Expert</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>International_Expert</fullName>
        <active>true</active>
        <description>makes sure the criteria for International Experts is fulfilled</description>
        <errorConditionFormula>AND(  Tier__c !=&quot;Tier 1&quot;, OR(INCLUDES( Expert_Role__c , &quot;International Researcher&quot;),INCLUDES(Expert_Role__c, &quot;International Speaker&quot;),INCLUDES(Expert_Role__c,&quot;International Thought Leader&quot;)))</errorConditionFormula>
        <errorMessage>You cannot select an international role if the expert does not meet the Tier 1 crieria</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MEA_phone_mobilephone_validation</fullName>
        <active>true</active>
        <description>MEA needs a validation that phone numbers can only added to the system with the right country code
case: 00460573</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Mobile_Phone__c)),
OR(
AND(NOT(REGEX(Mobile_Phone__c,&quot;971[0-9]*$&quot;)),ISPICKVAL(Contact__r.Account.Country__c,&quot;AE&quot;)),
AND(NOT(REGEX(Mobile_Phone__c,&quot;20[0-9]*$&quot; )),ISPICKVAL(Contact__r.Account.Country__c,&quot;EG&quot;)),
AND(NOT(REGEX(Mobile_Phone__c,&quot;966[0-9]*$&quot;)),ISPICKVAL(Contact__r.Account.Country__c,&quot;SA&quot;)),
AND(NOT(REGEX(Mobile_Phone__c,&quot;965[0-9]*$&quot;)),ISPICKVAL(Contact__r.Account.Country__c,&quot;KW&quot;)),
AND(NOT(REGEX(Mobile_Phone__c,&quot;962[0-9]*$&quot;)),ISPICKVAL(Contact__r.Account.Country__c,&quot;JO&quot;)),
AND(NOT(REGEX(Mobile_Phone__c,&quot;968[0-9]*$&quot;)),ISPICKVAL(Contact__r.Account.Country__c,&quot;OM&quot;)),
AND(NOT(REGEX(Mobile_Phone__c,&quot;973[0-9]*$&quot;)),ISPICKVAL(Contact__r.Account.Country__c,&quot;BH&quot;)),
AND(NOT(REGEX(Mobile_Phone__c,&quot;98[0-9]*$&quot; )),ISPICKVAL(Contact__r.Account.Country__c,&quot;IR&quot;)),
AND(NOT(REGEX(Mobile_Phone__c,&quot;92[0-9]*$&quot; )),ISPICKVAL(Contact__r.Account.Country__c,&quot;PK&quot;)),
AND(NOT(REGEX(Mobile_Phone__c,&quot;974[0-9]*$&quot;)),ISPICKVAL(Contact__r.Account.Country__c,&quot;QA&quot;)),
AND(NOT(REGEX(Mobile_Phone__c,&quot;964[0-9]*$&quot;)),ISPICKVAL(Contact__r.Account.Country__c,&quot;IQ&quot;)),
AND(NOT(REGEX(Mobile_Phone__c,&quot;961[0-9]*$&quot;)),ISPICKVAL(Contact__r.Account.Country__c,&quot;LB&quot;))))  &amp;&amp;
OR(
ISPICKVAL($User.User_Country__c,&quot;UAE&quot;),
ISPICKVAL($User.User_Country__c,&quot;Egypt&quot;),
ISPICKVAL($User.User_Country__c,&quot;Saudi Arabia&quot;),
ISPICKVAL($User.User_Country__c,&quot;Kuwait&quot;),
ISPICKVAL($User.User_Country__c,&quot;Jordan&quot;),
ISPICKVAL($User.User_Country__c,&quot;Oman&quot;))</errorConditionFormula>
        <errorMessage>Add the right country code to fields &quot;MobilePhone&quot; AND &quot;Phone&quot; // AE=971, EG=20, SA=966, KW=965, JO=962, OM=968, BH=973, IR=98, PK=92, QA=974, IQ =964, LB=961</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>National_Expert</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Tier__c !=&quot;Tier 2&quot;, OR(INCLUDES(Expert_Role__c,&quot;National Advisor&quot;),INCLUDES(Expert_Role__c, &quot;National Researcher&quot;),INCLUDES(Expert_Role__c,&quot;National Speaker&quot;)))</errorConditionFormula>
        <errorMessage>Your Expert Role (national) does not match your Tier Criteria</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_KOLs_towards_Primary_Contacts</fullName>
        <active>true</active>
        <errorConditionFormula>Contact__r.Primary_Contact__c</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>Please note! You are not allowed to add KOLs towards a Primary Contact</errorMessage>
    </validationRules>
</CustomObject>